Prepare docs engine

--- a/content/docs/getting-started.mdx
+++ b/content/docs/getting-started.mdx
@@ -1,9 +1,9 @@
 ---
-title: Installation
+title: Getting started
 description: How to install dependencies and structure your app.
 ---
 
-## Pick Your Framework
+## Install dependencies
 
 Start by selecting your framework of choice. Then follow the instructions to install the dependencies and structure your app.
 foundation-ui is built to work with all React frameworks.
