Add contribute page

--- a/content/docs/getting-started.mdx
+++ b/content/docs/getting-started.mdx
@@ -17,27 +17,27 @@ description: How to install dependencies and structure your app.
 
 <br />
 
-**_Components:_**
+#### Components
 
 <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/components`} />
 
-**_Tokens:_**
+#### Tokens
 
 <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/tokens`} />
 
-**_Styles:_**
+#### Styles
 
 <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/styles`} />
 
-**_Core:_**
+#### Core
 
 <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/core`} />
 
-**_Analytics:_**
+#### Analytics
 
 <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/analytics`} />
 
-**_Hooks:_**
+#### Hooks
 
   <DocsCodePreview language="shell" code={`pnpm add @foundation-ui/hooks`} />
 </DocsSection>
@@ -95,9 +95,11 @@ description: How to install dependencies and structure your app.
 
 <DocsSection>
 ### Usage
+
 <DocsTextBlock>
   That's it! You can now use Foundation Design System.
 </DocsTextBlock>
+
 <DocsCodePreview
   code={`
     "use client"; // For nextjs apps
