Add Installation docs pages content

--- a/content/docs/core/installation.mdx
+++ b/content/docs/core/installation.mdx
@@ -3,4 +3,23 @@ title: Core Installation
 description: Install and setup @founfation-ui/core in your project.
 ---
 
+<DocsSection>
+#### Install @founfation-ui/core
+
+<DocsTextBlock>
+  `@foundation-ui/core` can be used to dynamically generate design tokens on
+  build-time or every time your library needs an update. use it with
+  `@foundation-ui/components`.
+</DocsTextBlock>
+
+<br />
+
+<DocsTextBlock>
+  Your can use usefui.dev's [Token Engine](/app) to generate new design token
+  libraries whenever you need.
+</DocsTextBlock>
+
+<DocsCodePreview language="shell" code={`pnpm add @foundation-ui/core`} />
+</DocsSection>
+
 <DocsFooter prev="/docs/color-mode/usage" next="/docs/core/generate-tokens" />
