--- a/content/docs/getting-started.mdx
+++ b/content/docs/getting-started.mdx
@@ -7,7 +7,7 @@ description: How to install dependencies and structure your app.
 ### Install
 
 <DocsTextBlock>
-  To get the most out of `@foundation-ui`, it is hight recommended to use at
+  To get the most out of `@foundation-ui`, it is strongly recommended to use at
   least `@foundation-ui/components` and `@foundation-ui/tokens`.
 </DocsTextBlock>
 <br />
