--- a/content/docs/uba/installation.mdx
+++ b/content/docs/uba/installation.mdx
@@ -3,6 +3,17 @@ title: Analytics Installation
 description: Install and setup @founfation-ui/analytics in your project.
 ---
 
+<DocsSection>
+#### Install @founfation-ui/analytics
+
+<DocsTextBlock>
+  `@foundation-ui/analytics` provides live user behavior analytics that you can
+  use in your algorithms to create better user experiences.
+</DocsTextBlock>
+
+<DocsCodePreview language="shell" code={`pnpm add @foundation-ui/analytics`} />
+</DocsSection>
+
 <DocsFooter
   prev="/docs/icons/installation"
   next="/docs/uba/use-behavior-analytics"
