--- a/content/docs/color-mode/usage.mdx
+++ b/content/docs/color-mode/usage.mdx
@@ -1,5 +1,5 @@
 ---
-title: Color mode
+title: Color Mode
 description: Setup and use @founfation-ui/tokens's color mode hook in your project.
 ---
 
