--- a/content/docs/components/installation.mdx
+++ b/content/docs/components/installation.mdx
@@ -3,6 +3,17 @@ title: Components Installation
 description: Install and setup @founfation-ui/components in your project.
 ---
 
+<DocsSection>
+#### Install @founfation-ui/components
+
+<DocsTextBlock>
+  To get the most out of `@foundation-ui/components`, it is strongly recommended
+  to use it with `@foundation-ui/tokens`.
+</DocsTextBlock>
+
+<DocsCodePreview language="shell" code={`pnpm add @foundation-ui/components`} />
+</DocsSection>
+
 <DocsFooter
   prev="/docs/getting-started"
   next="/docs/components/components-api"
