--- a/content/docs/tokens/installation.mdx
+++ b/content/docs/tokens/installation.mdx
@@ -3,4 +3,15 @@ title: Design Tokens Installation
 description: Install and setup @founfation-ui/tokens in your project.
 ---
 
+<DocsSection>
+#### Install @founfation-ui/tokens
+
+<DocsTextBlock>
+  To get the most out of `@foundation-ui/tokens`, it is strongly recommended to
+  use it with `@foundation-ui/components`.
+</DocsTextBlock>
+
+<DocsCodePreview language="shell" code={`pnpm add @foundation-ui/tokens`} />
+</DocsSection>
+
 <DocsFooter prev="/docs/components-hooks/usage" next="/docs/tokens/libraries" />
