Add components docs

--- a/content/docs/getting-started.mdx
+++ b/content/docs/getting-started.mdx
@@ -60,7 +60,7 @@ description: How to install dependencies and structure your app.
     It enables you to switch between Themes based on user preferences.
   </DocsTextBlock>
   <br />
-  <DocsTextBlock>
+  <DocsTextBlock className="m-b-medium-60">
     `@foundation-ui/tokens` comes with a set of pre-built GlobalStyles
     definitions to ensure a consistent visual language across all your apps,
     regardless of platform or device. You can build your own using `@foundation-ui/core` and replace the default integration using your custom values.
@@ -94,9 +94,10 @@ description: How to install dependencies and structure your app.
 </DocsSection>
 
 <DocsSection>
+
 ### Usage
 
-<DocsTextBlock>
+<DocsTextBlock className="m-b-medium-60">
   That's it! You can now use Foundation Design System.
 </DocsTextBlock>
 
