--- a/content/docs/components/avatar.mdx
+++ b/content/docs/components/avatar.mdx
@@ -3,4 +3,107 @@ title: Avatar
 description: Avatar are used to represents a user or an entity on an interface.
 ---
 
+<DocsSection>
+
+<DocsPreview language="tsx" component={<AvatarTemplate />} code={`import React from "react";
+import { Avatar } from "@foundation-ui/components";
+
+function AvatarTemplate() {
+
+    return (
+        <div className="grid g-medium-30 p-t-large-30 p-x-medium-60">
+            <div className="flex align-center g-medium-10 justify-center">
+                {["small", "medium", "large"].map((size, key) => (
+                    <Avatar
+                        key={key}
+                        sizing={size as "small" | "medium" | "large"}
+                        src="https://avatars.githubusercontent.com/u/59123840?s=96&v=4"
+                    />
+                ))}
+            </div>
+            <div className="flex align-center g-medium-10 justify-center">
+                {["online", "away", "busy", "offline"].map((status, key) => (
+                    <Avatar
+                        key={key}
+                        status={status as "online" | "away" | "busy" | "offline"}
+                        style={{ background: "var(--font-color-alpha-10)" }}
+                    >
+                        <small>UI</small>
+                    </Avatar>
+                ))}
+            </div>
+        </div>
+    );
+
+}
+
+export default AvatarTemplate;
+`} />
+
+</DocsSection>
+
+<DocsSection>
+
+### Anatomy
+
+<DocsTextBlock className="m-b-medium-60">
+  The Avatar component **_is not_** built using the [Compound
+  pattern](https://www.patterns.dev/react/compound-pattern/), it carries all the
+  properties required to make to component work as intended.
+</DocsTextBlock>
+
+<DocsCodePreview
+  language="tsx"
+  code={`import { Avatar } from "@foundation-ui/components";
+
+export function AvatarComponent() {
+    return (
+      <Avatar>UI</Avatar>
+    );
+}
+`} />
+
+</DocsSection>
+
+### API Reference
+
+<DocsSection className="m-y-large-10">
+
+<DocsPropsTable
+  properties={[
+ {
+      name: "src",
+      type: "string",
+      required: false,
+    },
+    {
+      name: "alt",
+      type: "string",
+      required: false,
+    },
+    {
+      name: "children",
+      type: "ReactNode",
+      required: false,
+    },
+    {
+      name: "sizing",
+      type: "small | medium | large",
+      defaultValue: "medium",
+      required: false,
+    },
+    {
+      name: "status",
+      type: '"online" | "away" | "busy" | "offline"',
+      required: false,
+    },
+    {
+      name: "raw",
+      type: "boolean",
+      required: false,
+    },
+  ]}
+/>
+</DocsSection>
+
 <DocsFooter prev="/docs/components/accordion" next="/docs/components/badge" />
