--- a/content/docs/components/button.mdx
+++ b/content/docs/components/button.mdx
@@ -3,4 +3,123 @@ title: Button
 description: Buttons are used to initialize an action.
 ---
 
+<DocsSection>
+
+<DocsPreview language="tsx" component={<ButtonTemplate />} code={`import React from "react";
+import { Button } from "@foundation-ui/components";
+
+function ButtonTemplate() {
+
+    return (
+        <div className="grid g-medium-30 p-t-large-30 p-x-medium-60">
+            <div className="flex align-center g-medium-10 justify-center">
+                {["primary", "secondary", "tertiary", "mono", "border", "ghost"].map(
+                (variant, key) => (
+                    <Button
+                        key={key}
+                        variant={
+                            variant as
+                            | "primary"
+                            | "secondary"
+                            | "tertiary"
+                            | "mono"
+                            | "border"
+                            | "ghost"
+                        }
+                    >
+                    @fui
+                    </Button>
+                ),
+                )}
+            </div>
+            <div className="flex align-center g-medium-10 justify-center">
+                {["small", "medium", "large"].map((size, key) => (
+                    <Button key={key} sizing={size as "small" | "medium" | "large"}>
+                        @fui
+                    </Button>
+                ))}
+            </div>
+        </div>
+    );
+
+}
+
+export default ButtonTemplate;
+`} />
+
+</DocsSection>
+
+<DocsSection>
+
+### Anatomy
+
+<DocsTextBlock className="m-b-medium-60">
+  The Button component **_is not_** built using the [Compound
+  pattern](https://www.patterns.dev/react/compound-pattern/), it carries all the
+  properties required to make to component work as intended.
+</DocsTextBlock>
+
+<DocsCodePreview
+  language="tsx"
+  code={`import { Button } from "@foundation-ui/components";
+
+export function ButtonComponent() {
+    return (
+      <Button>@foundation-ui</Button>
+    );
+}
+`} />
+
+</DocsSection>
+
+### API Reference
+
+<DocsSection className="m-y-large-10">
+
+<DocsPropsTable
+  properties={[
+    {
+      name: "children",
+      type: "ReactNode",
+      required: true,
+    },
+    {
+      name: "variant",
+      type: '"primary" | "secondary" | "tertiary" | "mono" | "border" | "ghost"',
+      defaultValue: "mono",
+      required: false,
+    },
+    {
+      name: "sizing",
+      type: '"small" | "medium" | "large"',
+      defaultValue: "medium",
+      required: false,
+    },
+    {
+      name: "disabled",
+      type: "boolean",
+      defaultValue: "false",
+      required: false,
+    },
+    {
+      name: "onClick",
+      type: "(event: MouseEvent<HTMLButtonElement>) => void",
+      required: false,
+    },
+    {
+      name: "raw",
+      type: "boolean",
+      defaultValue: "false",
+      required: false,
+    },
+    {
+      name: "rawicon",
+      type: "boolean",
+      defaultValue: "false",
+      required: false,
+    },
+  ]}
+/>
+</DocsSection>
+
 <DocsFooter prev="/docs/components/badge" next="/docs/components/checkbox" />
